objects/Sold_To_Transfer_Request_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Original_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Sold To Transfer Request Details</relationshipLabel>
        <relationshipName>Sold_To_Transfer_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Sold_To__c</fullName>
        <formula>Original_Service_Contract__r.Sold_To_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Sold To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Transfer_Request_Header__c</fullName>
        <label>Sold To Transfer Request Header</label>
        <referenceTo>Sold_To_Transfer_Request_Header__c</referenceTo>
        <relationshipLabel>Sold To Transfer Request Details</relationshipLabel>
        <relationshipName>Sold_To_Transfer_Request_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transferred_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferred Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Sold To Transfer Request Details (Transferred Service Contract)</relationshipLabel>
        <relationshipName>Sold_To_Transfer_Request_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_Sold_To__c</fullName>
        <formula>Sold_To_Transfer_Request_Header__r.Target_Sold_To__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transferred Sold To</label>
        <type>Text</type>
    </fields>
    <label>Sold To Transfer Request Detail</label>
    <nameField>
        <displayFormat>STTAD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sold To Transfer Request Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>